--- a/style2.css
+++ b/style2.css
@@ -71,14 +71,14 @@ input[type='checkbox'] {
 /*CONTENT*/
 .main {
 	text-align: center;
-
+    width: 960px;
     margin-top: 3em;
     margin-left: auto;
     margin-right: auto
 	}
 .content {
 	display: inline-block;
-	max-width: 530px;
+	
 	width: 60.215053763440862%;
 	vertical-align: top;
 	height: auto;
@@ -128,7 +128,7 @@ input[type='checkbox'] {
 	}
 .sidebar {
 	display: inline-block;
-	max-width: 230px;
+	
 	width: 24.731182795698925%;
 	height: 300px;
 	margin-top: 1em;
@@ -152,7 +152,7 @@ input[type='checkbox'] {
 	padding-top: .7em;
 	color: #666666;
 	}
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024) {
+@media screen and (max-width: 979px) {
     .nav-link {
 		display: block;
 		height: 2.5em;
@@ -200,8 +200,7 @@ input[type='checkbox'] {
     }
     .main {
 	text-align: center;
-	max-width: 1024px;
-	min-width: 768px;
+	max-width: 979px;
 	width: 100%;
     margin-top: 3em;
     margin-left: auto;
@@ -212,8 +211,7 @@ input[type='checkbox'] {
 		}
 	.sidebar {
 		display: block;
-		max-width: 1024px;
-	    min-width: 768px;
+		max-width: 979px;
 	    width: 100%;
 	    height: auto;
 	    
@@ -234,7 +232,7 @@ input[type='checkbox'] {
 		}
 }
 	
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media screen and (max-width : 500px) {
 
  .nav-link {
 		display: block;
@@ -283,8 +281,7 @@ input[type='checkbox'] {
     }
 	.main {
 	text-align: center;
-	max-width: 480px;
-	min-width: 320px;
+	max-width: 500px;
 	width: 100%;
     margin-top: 3em;
     margin-left: auto;
@@ -294,12 +291,11 @@ input[type='checkbox'] {
 		width: 100%;
 		}
 	.sidebar {
-		max-width: 480px;
-	    min-width: 320px;
+		max-width: 500px;
 	    width: 100%;
 	    height: auto;
 	    
-	    margin-top: 2em;
+	    margin-top: 4.75em;
 	    padding-bottom: 1em;
 		}
 	.my-foto {
