--- a/style2.css
+++ b/style2.css
@@ -162,6 +162,9 @@ input[type='checkbox'] {
 	margin: auto;
 	line-height: 2.25em;
 	}
+.social-btn__link:link, .social-btn__link:visited 
+    color: #000000;
+}
 .git {
 	background: #cccccc;
 	border: 1px solid #cccccc;
