--- a/style2.css
+++ b/style2.css
@@ -161,6 +161,10 @@ input[type='checkbox'] {
 	border-radius: 2em;
 	margin: auto;
 	line-height: 2.25em;
+	corsor: pointer;
+	}
+.social-btn__link:link, .social-btn__link:visited {
+    color: black;
 	}
 .git {
 	background: #cccccc;
