--- a/style-news.css
+++ b/style-news.css
@@ -1,8 +1,12 @@
 *{box-sizing: border-box;}
+html, body, .wrapper, .main { 
+	height: 110%;
+	}
 .line {
 	display: inline-block;
+	posihion: absolute;
 	width: 0.1em;
-	height: 100vh;
+	height: 110%;
 	border: 1px solid #00cc99;
 	background-color: #00cc99;
 	margin-top: -3em;
@@ -25,11 +29,11 @@
 	height: auto;
 	margin-bottom: 2em;
 	}
-.post {
+.post_news {
 	display: inline-block;
 	border: 1px solid rgb(250,250,250);
 	width: 85%;
-	min-height: 200px;
+	min-height: 120px;
 	height: auto;
 	float: right;
 	box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -57,6 +61,27 @@
 	margin-top: -.75em;
 	margin-left: -.75em;
 	}
+
+.text_news {
+	display: block;
+	text-align: left;
+	color: #666666;
+	padding-left: 1.5em;
+	padding-top: 1.5em;
+	}
+.avtor-and-data {
+	display: block;
+	text-align: left;
+	padding-bottom: 1em;
+	padding-left: 2em;
+	padding-top: 2em;
+	color: #666666;
+	font-size: .75em; 
+	}
+.tochka-date {
+	font-size: .6em;
+	}
+	
 @media screen and (max-width : 500px) {
 	.content__content {
 		.width: 100%;
